# Autonomous-Bicycle

./: .gitignore  Jetson.txt  Notes.txt  README.md  SageAnimalTrain.ipynb  coder.tf  contacts_seed.csv  data.ipynb  demo_webcam_segmentation.py  depthandspeedestimationresearch.md  environment.sagemaker-v2.yml  google_contacts_seed.csv  kaggle.json  requirements.sagemaker-v2.lock.txt  requirements.txt  sage.ipynb  skills.md  test.ipynb  test.txt  train.py  training.py  training_pinnacle.txt
Depth-Anything-V2/: app.py  run.py
HybridNets/: .gitignore  Project-Brass-2.txt  backbone.py  data_analysis.ipynb  hybridnets_test.py  hybridnets_test_videos.py  requirements.txt  stanley.ipynb  train.py  train_ddp.py  train_functions.py  val.py  val_ddp.py
HybridNets_Jetson/: ExportOnnxRuntime.py  InferRoadCamera.py  InferRoadVideo.py  road_segmentation_model.py  run_camera.sh  runtime_utils.py  video_common.py
LaneATT/: convertTensorRT.py  convert_depth_onnx.py  convertonnx.py  depth2.py  depthInference.py  inference.ipynb  inference.py  main.py  resnet101.sh  resnet152.sh  resnet18.sh  resnet34.sh  resnet50.sh  test_depth_onnx.py
LaneNet/: start.ipynb  upload.sh
ros2_ws/src/autonomous_bicycle_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/autonomous_bicycle_gazebo/launch/: curved_world.launch.py  straight_road.launch.py
ros2_ws/src/autonomous_bicycle_gazebo/models/: make_roads.py
ros2_ws/src/autonomous_bicycle_gazebo/models/curved_road/: model.config  model.sdf
ros2_ws/src/autonomous_bicycle_gazebo/worlds/: curved.world  curved_road_world.world  straight_road.world
(+279 files in other folders)
