<?xml version="1.0"?>
<package format="3">
  <name>autonomous_bicycle_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo Classic worlds and launch files for the autonomous bicycle project.</description>
  <maintainer email="aman@example.com">aman</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
